Fixes for footer on tablet and desktop

--- a/8-meet-landing-page/meet-landing-page/presets.css
+++ b/8-meet-landing-page/meet-landing-page/presets.css
@@ -7,6 +7,7 @@
     --spacing-800: 64px;
     --spacing-900: 72px;
     --spacing-1000: 80px;
+    --spacing-1400: 112px;
 
     --cyan-300: hsl(192, 90%, 67%);
     --cyan-600: hsl(192, 37%, 48%);
@@ -46,6 +47,12 @@
     letter-spacing: 0;
 }
 
+@media (1000px <= width) {
+    .text-preset-2 {
+        font-size: 40px;
+    }
+}
+
 .text-preset-3 {
     font-family: "Red Hat Display", sans-serif;
     font-optical-sizing: auto;
@@ -64,6 +71,12 @@
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0;
+}
+
+@media (1000px <= width) {
+    .text-preset-4 {
+        font-size: 18px;
+    }
 }
 
 .text-preset-5 {
